feat/added_price_&_apiResource
